2008-05-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	For "make check", drop result/connection object references when done.

	* testing.scm (d/c): New proc.
	(drop!): Use `d/c'.
	(create!): Delete proc.
	(fresh!): New proc.
	* basic.scm: Use `fresh!'.
	* large.scm: Use `fresh!'
	(main): Use `pg-finish'.
	* types-table.scm: Use `fresh!'.
	(test-m2): Do `(m2 'finish)'.
	(test-m3): Do `(m3 #:finish)'.
	(cleanup!): Do `(m #:finish)'.
	* meta.scm: Use `fresh!'; reset `RES' and `CONN'.

2008-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Clean up test environment GUILE_LOAD_PATH value.

	* runtest.in (GUILE_LOAD_PATH): Use @abs_top_builddir@;
	eliminate trailing colon in value.

2008-05-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Avoid dropdb(1) and createdb(1); use SQL commands directly.

	* testing.scm (fs): New proc.
	(drop!, create!): Rewrite procs.
	* basic.scm: Move `drop!' and `create!' calls after `use-modules'.
	* large.scm: Likewise.
	* types-table.scm: Likewise.
	* meta.scm: Likewise.
	* drop.sh.in: Delete file.
	* create.sh.in: Likewise.

2008-05-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Add standard introspection support to (database postgres-meta).

	* meta.scm: New file.
	* Makefile.am (TESTS): Add meta.scm.

2008-05-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Revamp "make check".

	* testing.scm (drop!, create!, manually-load): New procs.
	* alive.scm: New file.
	* basic.scm: New file.
	* large.scm: New file.
	* types-table.scm: New file.
	* alive.sh: Delete file; incorporate into alive.scm.
	* basic-tests.sh: Delete file; incorporate into basic.scm.
	* guile-pg-basic-tests.scm: Likewise.
	* lo-tests.sh: Delete file; incorporate into large.scm.
	* guile-pg-lo-tests.scm: Likewise.
	* abstraction-scm-tests.sh: Delete file;
	incorporate into types-table.scm.
	* guile-pg-abstraction-scm-tests.scm: Likewise.
	* runtest.in: New file.
	* Makefile.am (abs_top_builddir): Delete var.
	(TESTS_ENVIRONMENT): Rewrite.
	(TESTS): Rewrite.